Patching is still broken :-P